--- a/src/FG.Samples.ServiceFabricPeople/ServiceFabricPeople.Tests/ServiceFabricPeople.Tests.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/ServiceFabricPeople.Tests/ServiceFabricPeople.Tests.csproj
@@ -1,205 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿ <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3320493-6BD1-4F00-A765-5BACF65D732B}</ProjectGuid>
+    <TargetFramework>net461</TargetFramework>
+    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
+    <Platforms>AnyCPU;x64</Platforms>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceFabricPeople.Tests</RootNamespace>
-    <AssemblyName>ServiceFabricPeople.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Company>Fabricators Guild</Company>
+    <Authors>Fabricators Guild</Authors>
+    <Product>Fabricators Guild Service Fabric Samples - Peoples</Product>
+    <Description>Test project</Description>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
+    <PackageReference Include="FluentAssertions" Version="4.19.4" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Inputs.Etw" Version="1.1.2" />
+    <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WindowsServer" Version="2.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="NUnit" Version="3.9.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.Common\FG.Common.csproj">
-      <Project>{2B74FE3F-C1D2-4ECC-9347-8FFBCF687AB5}</Project>
-      <Name>FG.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Actors.Remoting\FG.ServiceFabric.Actors.Remoting.csproj">
-      <Project>{045616fb-2560-4168-b073-8d5b86fa7b52}</Project>
-      <Name>FG.ServiceFabric.Actors.Remoting</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Extensions\FG.ServiceFabric.Extensions.csproj">
-      <Project>{bcee1998-b962-48a3-b31e-e345dbed1348}</Project>
-      <Name>FG.ServiceFabric.Extensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Persistence\FG.ServiceFabric.Persistence.csproj">
-      <Project>{61CE425B-F4B5-4981-8CF9-9A5C901ADD2B}</Project>
-      <Name>FG.ServiceFabric.Persistence</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Services.Remoting\FG.ServiceFabric.Services.Remoting.csproj">
-      <Project>{1a4f9c49-629b-4331-be3c-698fffaa294c}</Project>
-      <Name>FG.ServiceFabric.Services.Remoting</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Testing\FG.ServiceFabric.Testing.csproj">
-      <Project>{2F2B5701-77B5-4467-9504-8BE73A3725A7}</Project>
-      <Name>FG.ServiceFabric.Testing</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Application\Application.csproj">
-      <Project>{E3324371-73A6-4578-A9D9-7221E7838C89}</Project>
-      <Name>Application</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PersonActor.Interfaces\PersonActor.Interfaces.csproj">
-      <Project>{f1eb614a-4667-4dfd-8d39-6a650e8c8a4c}</Project>
-      <Name>PersonActor.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PersonActor\PersonActor.csproj">
-      <Project>{d3aa7ce3-151c-4560-9691-232b643f31aa}</Project>
-      <Name>PersonActor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TitleService\TitleService.csproj">
-      <Project>{8e763765-0763-4c91-9d05-dff429ee7d59}</Project>
-      <Name>TitleService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WebApiService\WebApiService.csproj">
-      <Project>{517492f6-d0ff-410f-a7cc-7c5863a471e0}</Project>
-      <Name>WebApiService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WebService\WebService.csproj">
-      <Project>{c9649d8b-b478-4c38-919c-727c1114e0ff}</Project>
-      <Name>WebService</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.Common\FG.Common.csproj" />
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Actors.Remoting\FG.ServiceFabric.Actors.Remoting.csproj" />
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Extensions\FG.ServiceFabric.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Persistence\FG.ServiceFabric.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Services.Remoting\FG.ServiceFabric.Services.Remoting.csproj" />
+    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Testing\FG.ServiceFabric.Testing.csproj" />
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\PersonActor.Interfaces\PersonActor.Interfaces.csproj" />
+    <ProjectReference Include="..\PersonActor\PersonActor.csproj" />
+    <ProjectReference Include="..\TitleService\TitleService.csproj" />
+    <ProjectReference Include="..\WebApiService\WebApiService.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Reference Include="DynamicObjectProxy, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamicObjectProxy.0.0.5\lib\net40\DynamicObjectProxy.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentAssertions, Version=4.19.4.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentAssertions.4.19.4\lib\net45\FluentAssertions.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentAssertions.Core, Version=4.19.4.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentAssertions.4.19.4\lib\net45\FluentAssertions.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="ImpromptuInterface, Version=6.2.2.0, Culture=neutral, PublicKeyToken=0b1781c923b2975b, processorArchitecture=MSIL">
-      <HintPath>..\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Actors, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Actors.2.8.232\lib\net45\Microsoft.ServiceFabric.Actors.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Data.2.8.232\lib\net45\Microsoft.ServiceFabric.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Data.Interfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Data.2.8.232\lib\net45\Microsoft.ServiceFabric.Data.Interfaces.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Diagnostics, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Diagnostics.Internal.2.8.232\lib\net45\Microsoft.ServiceFabric.Diagnostics.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.FabricTransport, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.FabricTransport.Internal.2.8.232\lib\net45\Microsoft.ServiceFabric.FabricTransport.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.FabricTransport.V2, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.FabricTransport.Internal.2.8.232\lib\net45\Microsoft.ServiceFabric.FabricTransport.V2.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Internal, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\Microsoft.ServiceFabric.Internal.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Internal.Strings, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\Microsoft.ServiceFabric.Internal.Strings.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Preview, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\Microsoft.ServiceFabric.Preview.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Services, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Services.2.8.232\lib\net45\Microsoft.ServiceFabric.Services.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Services.Remoting, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Services.Remoting.2.8.232\lib\net45\Microsoft.ServiceFabric.Services.Remoting.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Fabric, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\System.Fabric.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Fabric.Management.ServiceModel, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\System.Fabric.Management.ServiceModel.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Fabric.Management.ServiceModel.XmlSerializers, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\System.Fabric.Management.ServiceModel.XmlSerializers.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Fabric.Strings, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.6.0.232\lib\net45\System.Fabric.Strings.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <Compile Include="CommunicationLogger.cs">
-      <AutoGen>true</AutoGen>
-      <AutoGenerated>LoggerImplementation</AutoGenerated>
-      <DependentUpon>ServiceFabricPeopleTestsEventSource.eventsource.json</DependentUpon>
-    </Compile>
-    <Compile Include="FabricRuntime_integration_tests.cs" />
-    <Compile Include="Full_environment_testing.cs" />
-    <Compile Include="ICommunicationLogger.cs" />
-    <None Include="packages.config" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceFabricPeopleTestsEventSource.cs">
-      <AutoGen>true</AutoGen>
-      <AutoGenerated>EventSource</AutoGenerated>
-      <DependentUpon>ServiceFabricPeopleTestsEventSource.eventsource.json</DependentUpon>
-    </Compile>
-    <None Include="ServiceFabricPeopleTestsEventSource.eventsource.json">
-      <AutoGenerated>DefaultGeneratedEventSourceDefinition</AutoGenerated>
-      <Hash>efbfbdefbfbd5e2defbfbdefbfbdefbfbdefbfbd202aefbfbd6a4aefbfbd486c</Hash>
-    </None>
-    <Content Include="ServiceFabricPeopleTestsEventSource.eventsource.output.json">
-      <AutoGen>true</AutoGen>
-      <AutoGenerated>ProjectSummary</AutoGenerated>
-      <DependentUpon>ServiceFabricPeopleTestsEventSource.eventsource.json</DependentUpon>
-    </Content>
-    <Compile Include="ServiceFabricPeopleTestsEventSource.ICommunicationLogger.cs">
-      <AutoGen>true</AutoGen>
-      <AutoGenerated>EventSourceLoggerPartial</AutoGenerated>
-      <DependentUpon>ServiceFabricPeopleTestsEventSource.eventsource.json</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Microsoft.ServiceFabric.Actors.2.8.232\build\Microsoft.ServiceFabric.Actors.targets" Condition="Exists('..\packages\Microsoft.ServiceFabric.Actors.2.8.232\build\Microsoft.ServiceFabric.Actors.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.ServiceFabric.Actors.2.8.232\build\Microsoft.ServiceFabric.Actors.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.ServiceFabric.Actors.2.8.232\build\Microsoft.ServiceFabric.Actors.targets'))" />
-  </Target>
 </Project>
