--- a/src/FG.Samples.ServiceFabricPeople/WebApiService/WebApiService.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/WebApiService/WebApiService.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
     <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
-    <IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
-    <ApplicationInsightsResourceId>/subscriptions/35be3912-f4a0-4696-9494-e7c17651b2f6/resourcegroups/ce-labs-common-dev/providers/microsoft.insights/components/ce-labs-fabric-ai-dev</ApplicationInsightsResourceId>
-    <ApplicationInsightsAnnotationResourceId>/subscriptions/35be3912-f4a0-4696-9494-e7c17651b2f6/resourcegroups/ce-labs-common-dev/providers/microsoft.insights/components/ce-labs-fabric-ai-dev</ApplicationInsightsAnnotationResourceId>
     <Platforms>AnyCPU;x64</Platforms>
+    <OutputType>Exe</OutputType>
+    <Company>Fabricators Guild</Company>
+    <Authors>Fabricators Guild</Authors>
+    <Product>Fabricators Guild Service Fabric Samples - Peoples</Product>
+    <Description>API project</Description>
+    <IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,28 +20,42 @@
     <EmbeddedResource Remove="wwwroot\**" />
     <None Remove="wwwroot\**" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="PackageRoot\Config\eventFlowConfig.json" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.DependencyCollector" Version="2.4.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.Web" Version="2.4.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Core" Version="1.1.8" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.EtwUtilities" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Inputs.Etw" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Inputs.EventSource" Version="1.2.0" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Outputs.ApplicationInsights" Version="1.2.1" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.Outputs.StdOutput" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Diagnostics.EventFlow.ServiceFabric" Version="1.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
     <PackageReference Include="Microsoft.ServiceFabric" Version="6.0.232" />
     <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="2.8.232" />
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.WebListener" Version="2.8.232" />
     <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.8.232" />
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.8.232" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.4.1" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="PackageRoot\Config\eventFlowConfig.json" />
     <None Include="WebApiServiceEventSource.eventsource.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Actors.Remoting\FG.ServiceFabric.Actors.Remoting.csproj" />
-    <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Diagnostics\FG.ServiceFabric.Diagnostics.csproj" />
     <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Extensions\FG.ServiceFabric.Extensions.csproj" />
     <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.ServiceFabric.Services.Remoting\FG.ServiceFabric.Services.Remoting.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
